# Spanish-learning-project

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  COACH_INSTRUCTIONS.md  DATA_SOURCES.md  FOUR_STRANDS_REDESIGN.md  GEMINI.md  HANDOFF_QUICK_REF.md  IMPLEMENTATION_SUMMARY.md  LLanguageMe  Makefile  PR_SUMMARY.md  PULL_REQUEST.md  README.md  SESSION_HANDOFF.md  SESSION_NOTES.md  SPANISH_COACH.md  STATUS.md  STRATEGY.md  TODO.md  idea.md  kg.sqlite  pyproject.toml  requirements.txt  span_200k.txt  span_40k_forms.txt  span_40k_lemmas.txt  test_preview_negotiate.py
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
agents/: EXPERIMENT_WRITEUP.md  README.md  SCALE_TEST_FINDINGS.md  analyze_results.py  bootstrap_items.py  coach_instructions.py  learner_persona.py  lesson_runner.py  scale_test.py  spanish_workflow.py
agents/logs/: session_1a6955cf-1383-4911-8a76-7f2d788daade_20251105_194808.json  session_216a1ec9-aee8-45f7-92dd-4cc720696e0f_20251105_194808.json  session_22ef7a39-d680-4f4c-a8b2-15db31968e1c_20251105_194737.json  session_31b60913-2d68-4d7a-88e2-a68e721aeab7_20251105_194737.json  session_32bcca7c-2113-4d96-a80b-8ae488db4d6e_20251105_194737.json  session_4360e1fc-288a-45d2-a9bc-50d9f47e7012_20251105_194808.json  session_4b65aced-ab0d-44d9-8b10-180bde45e787_20251105_194737.json  session_4d7b2d97-35d5-441f-a524-efb74954c404_20251105_194808.json  session_5ac41fec-1d7f-4342-a4ff-80692ad0435e_20251105_194808.json  session_64429d1a-ad94-421e-b750-2bd07b020101_20251105_194738.json  session_6b67da18-77b1-4d6d-b9b7-e6dc0b007eeb_20251105_194737.json  session_7a985002-81c2-4f2f-946a-3016cbf9f844_20251105_194808.json  session_7e854914-b71a-4373-86fa-29566823d0f7_20251105_194808.json  session_82aa3182-1308-40e3-a876-320520543533_20251105_193819.json  session_aef823ef-e55c-44c5-b565-cd723336ef3a_20251105_194808.json  session_bba2f6c1-efe3-4143-a428-0e8733cfd567_20251105_194808.json  session_c05f0f08-5137-4ac1-a7af-7ec3bfc5ecc2_20251105_194808.json  session_e7ee5c17-4af4-4384-a2f7-f78ee4cdd1dd_20251105_194738.json  session_fc7079b0-82fc-422b-a706-1ff33b8224b1_20251105_194738.json
data/frequency/: README.md
docs/: README.md
docs/handoffs/: README.md
docs/sessions/: README.md  analysis-20251106.md  sessions-20251106.json  transcript-20251106.txt
evaluation/: README.md  cefr-can-do-mapping.yaml  narrative-speaking-b1.yaml  speaking-rubric-a2-b1.yaml  writing-rubric-a2-b1.yaml
kg/: EXPANSION_PLAN.md  README.md  build.py  phase_I_landscape.md  split_yaml_nodes.py
kg/descriptors/: README.md  b1_descriptors.csv  launch_plan.md
kg/seed/: assessment.es.coherence_cohesion_B1.yaml  assessment.es.grammatical_control_B1.yaml  assessment.es.lexical_range_B1.yaml  assessment.es.phonological_control_B1.yaml  cando.es.cope_with_unexpected_B1.yaml  cando.es.defend_viewpoint_B1.yaml  cando.es.describe_experiences_B1.yaml  cando.es.exchange_information_work_B1.yaml  cando.es.exchange_information_writing_B1.yaml  cando.es.give_reasons_explanations_B1.yaml  cando.es.handle_travel_situations_B1.yaml  cando.es.narrate_events_writing_B1.yaml  cando.es.narrate_past_events_B1.yaml  cando.es.present_topic_B1.yaml  cando.es.relate_plot_B1.yaml  cando.es.relay_main_points_B1.yaml  cando.es.resolve_misunderstandings_B1.yaml  cando.es.summarize_argument_B1.yaml  cando.es.write_complaint_B1.yaml  cando.es.write_opinion_B1.yaml  (+80 more)
lesson_templates/: README.md  conversation-a2.yaml  grammar-drill-b1.yaml  integrated-skills-b1.yaml  listening-comprehension-a2.yaml  narrate-past-events-b1.yaml  vocabulary-production-a2.yaml
mcp_servers/: __init__.py
scripts/: build_frequency_index.py  process_preseea.py  validate_kg.py  viz_kg.py
sessions/: items-20251106.json
state/: README.md  SESSION_PLANNER.md  coach.py  db_init.py  fsrs.py  learner.yaml  mastery.sqlite  schema.sql  session_planner.py  test_coach.py  test_session_planner.py
tests/: README.md  __init__.py  conftest.py  test_fsrs.py  test_kg_build.py  test_smoke.py
tools/: frequency_lookup.py  preseea_sampler.py
(+640 files in other folders)
